<resources>
    <string name="app_name">androidLocationManager</string>

    <string name="nav_add_poi">Add location to Favorites</string>
    <string name="nav_map">Map</string>
    <string name="nav_list_poi">Favorite locations</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_share_me">Share me!</string>
    <string name="nav_contact">Contact</string>

    <string name="fab_goto_my_position">Go to my position</string>
    <string name="nav_plus">Plus</string>
    <string name="current_location">Current location</string>
    <string name="default_location">Marker in Campina Grande - PB, BR</string>
    <string name="getting_current_location">Getting your current coordinates . . .</string>
    <string name="nav_about">About the developer</string>
    <string name="locations_permission_denied_msg">It will not be possible to use LocationServices until you give this permission.</string>
    <string name="ok" translatable="false">OK</string>
    <string name="notice">Notice</string>
    <string name="cancel">Cancel</string>
    <string name="quit_message">Are you sure you want to exit?</string>
    <string name="location_search_timeout">It was not possible to retrieve your position. Would you like to use your last known position? Warning: your last known position is less accurate than the one captured at this moment.</string>
    <string name="invalid_position">It was not possible to define a valid position. Please verify your GPS and Internet connections and try again.</string>
    <string name="newlocation_name_choosing_dialog_title">New location</string>
    <string name="newlocation_name_choosing_dialog_content">Insert a name for this location:</string>
    <string name="newlocation_name_choosing_dialog_hint">Home sweet home</string>
    <string name="newlocation_saved_successfully">saved successfully!</string>
    <string name="newlocation_existing_name_error">There is already a location with same name!</string>
    <string name="save">Salvar</string>
    <string name="map_normal_type" translatable="false">Normal</string>
    <string name="map_terrain_type">Terrain</string>
    <string name="map_satellite_type">Satellite</string>
    <string name="latitude_pos" translatable="false">-1</string>
    <string name="longitude_pos" translatable="false">-1</string>
    <string name="enable_location_services">The location services are disable. You need to enable it to be able to use this app\'s features. Would you like to do it now?</string>
    <string name="enable_location_services_deny_msg">You will not be able to use the app\'s features until enable the Location Services.</string>
    <string name="locations_list_empty_database">There are no locations saved a moment. Click on \'+\' button to save your first location.</string>
    <string name="latitude_tv" translatable="false">Latitude: %s</string>
    <string name="longitude_tv" translatable="false">Longitude: %s</string>
    <string name="fab_add_new_category">Add new category</string>
    <string name="fab_add_new_poi">Add new location</string>
    <string name="google_client_not_connected">There was a problem trying to connect google client. While this not happen, locations updates willbe provided just by sattelite.</string>
    <string name="nav_add_category">Add new locations category</string>
    <string name="newcategory_name_choosing_dialog_title">New category</string>
    <string name="newcategory_name_choosing_dialog_hint">Parkings</string>
    <string name="newcategory_name_choosing_dialog_content">Insert a name for this category:</string>
    <string name="newcategory_existing_name_error">There is already a category with same name!</string>
    <string name="no_categories_found">There are no categories registered. To be able to create a location, you need to add a category first!</string>
    <string name="newlocation_category_required">You need to choose a category first!</string>
    <string name="category_created_successfully">Category %s created successfully!</string>
    <string name="location_created_successfully">Location %s created successfully!</string>
</resources>
