<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_map"
            android:icon="@mipmap/ic_map"
            android:title="@string/nav_map" />
        <item
            android:id="@+id/nav_poi_list"
            android:icon="@mipmap/ic_view_list"
            android:title="@string/nav_list_poi" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@mipmap/ic_settings"
            android:title="@string/nav_settings" />
    </group>

    <item android:title="@string/nav_plus">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@mipmap/ic_share"
                android:title="@string/nav_share_me" />
            <item
                android:id="@+id/nav_contact"
                android:icon="@mipmap/ic_send"
                android:title="@string/nav_contact" />
        </menu>
    </item>

</menu>
